--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -486,3 +486,20 @@ img {
     width: 450px;
   }
 }
+
+
+.work__button {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 0.5rem 1rem;
+    background-color: #007bff;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.work__button:hover {
+    background-color: #0056b3;
+}
